--- a/atvd13.html
+++ b/atvd13.html
@@ -8,21 +8,20 @@
 </head>
 <body>
     <from action="" id="myform">
-        <label for="var1">Variavel 1</label>
-        <input type="number" name="var1" id="var1">
-        <label for="var2">Variavel 2</label>
-        <input type="number" name="var2" id="var2">
+        <label for="var1">Variavel 1:</label><br>
+        <input type="number" name="var1" id="var1"><br>
+        <label for="var2">Variavel 2:</label><br>
+        <input type="number" name="var2" id="var2"><br>
 
-        <LABEL for="nomeFuncionario">Nome Funcionario</LABEL>
-        <input type="text" id="nomeFuncionario" name="nomeFuncionario"> 
+        <LABEL for="nomeFuncionario">Nome Funcionario</LABEL><br>
+        <input type="text" id="nomeFuncionario" name="nomeFuncionario"> <br>
 
-        <label for="salarioBruto">Salario Bruto</label>
-        <input type="number" id="nomeFuncionario" name="salarioBruto"><br>
+        <label for="salarioBruto">Salario Bruto:</label><br>
+        <input type="number" id="salarioBruto" name="salarioBruto"><br>
 
         <input type="button" value="calcular" onclick="calcular()"><br>
-
-        <div id="resultados"></div>
-
     </from>
+
+    <div id="resultados"></div>
 </body>
 </html>
